# -Br-dev-jobs

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/routes/: health.py  insights.py  jobs.py
app/core/: config.py  exceptions.py  logging.py
app/etl/: deduplicator.py  enricher.py  normalizer.py
app/models/: db.py  schemas.py
app/scheduler/: jobs.py
app/scrapers/: base.py  gupy.py  indeed.py  linkedin.py  remoteok.py
docs/: architecture.md
tests/: conftest.py
tests/api/: test_insights.py  test_jobs.py
tests/etl/: test_deduplicator.py  test_enricher.py  test_normalizer.py
tests/scrapers/: test_remoteok.py
web/: index.html
web/static/css/: main.css
web/static/js/: main.js
