[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "br-dev-jobs"
version = "0.1.0"
description = "Aggregator and insight engine for Brazilian developer job listings"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Thiago Henrique" },
]
keywords = ["fastapi", "etl", "jobs", "python", "brazil", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "alembic",
    "playwright",
    "httpx",
    "spacy>=3.7",
    "apscheduler>=3.10",
    "redis>=5.0",
    "pydantic-settings",
    "structlog",
    "feedparser",
    "python-slugify",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Repository = "https://github.com/ThQMS/-Br-dev-jobs"
Issues = "https://github.com/ThQMS/-Br-dev-jobs/issues"
Changelog = "https://github.com/ThQMS/-Br-dev-jobs/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "T20", # flake8-print
]
ignore = [
    "ANN401", # dynamic integration points use Any intentionally
    "S101",   # use of assert (fine in tests)
    "UP042",  # keep str enum inheritance for Pydantic/SQLAlchemy compatibility
]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["ANN", "UP"]
"app/api/routes/insights.py" = ["S608"]
"app/api/routes/jobs.py" = ["B008"]
"app/etl/enricher.py" = ["S603"]
"app/scrapers/indeed.py" = ["E501", "S311"]
"app/scrapers/linkedin.py" = ["E501", "S311"]
"tests/**" = ["ANN", "S"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["tests/", "alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = ["tests/*", "alembic/*"]
